--- a/projects/ngx-primeng-form/package.json
+++ b/projects/ngx-primeng-form/package.json
@@ -8,6 +8,7 @@
     "@angular/cdk": "^9.2.2",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.6",
+    "ngx-material-timepicker": "^5.5.2",
     "tslib": "^1.10.0"
   }
 }
