--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ngx-material-timepicker": "^5.5.2",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.6",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
